--- a/The_Hangman_Challenge.ipynb
+++ b/The_Hangman_Challenge.ipynb
@@ -621,7 +621,7 @@
     {
       "cell_type": "code",
       "source": [
-        "hangman(word = 'Hangman')"
+        "hangman()"
       ],
       "metadata": {
         "id": "qt8Sob8z4nK8",
@@ -631,30 +631,7 @@
         "outputId": "953aa36d-9064-452d-ca93-908a5cb57b50"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "     \n",
-            "    _____      \n",
-            "   |/        \n",
-            "   |          \n",
-            "   |        \n",
-            "   |       \n",
-            " __|_________    \n",
-            "/            \\  \n",
-            " \n",
-            " S N M P \n",
-            "  \n",
-            " T E R R I T O R I A L\n",
-            "\n",
-            " You won! You saved the man.\n",
-            "\n",
-            " This word's scrabbleIndex was 0.45454545454545453.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
